testsuite/tests/th/T12387.stderr

T12387.hs:8:2: error:
    • Class ‘Eq’ does not have a method ‘compare’
    • In the instance declaration for ‘Eq Foo’
